# ccbfold

./: .gitignore  README.md  pyproject.toml
examples/: af3_workshop.ipynb
examples/workshop/: README.html  README.md  TODO.txt  Workshop.html  Workshop.qmd
examples/workshop/.posit/publish/: AF3 Workshop-4M8K.toml
examples/workshop/.posit/publish/deployments/: deployment-8U9J.toml
examples/workshop/01_basic/: TODO.txt  pdb_7rce_input.json  pdb_7rce_submit.sh
examples/workshop/02_batch_of_jobs/: generate_af3_inputs.py  preliminaryTests.tsv  step1_generate_af3_inputs.py  step2_submit_batch.sh  submit_batch.sh
examples/workshop/03_separate_msa/: step1_generate_af3_inputs.py  step2_submit_msa_batch.sh  step3_submit_inference_batch.sh
examples/workshop/03_seperate_msa/: step2_submit_msa_batch.sh  step3_submit_inference_batch.sh
examples/workshop/04_mmseqs2_msa/: step1_generate_colabfold_msa_input.py  step2_submit_colabfold_msa.sh  step3_generate_af3_inference_inputs.py  step4_submit_af3_inference_batch.sh
examples/workshop/05_visualization/: eval_plots.py  pdb_7rce_visualization.ipynb  step1_parse_results.ipynb  step1_visualize_af3_outputs.ipynb  step1_visualize_af3_outputs.md
examples/workshop/05_visualization/.ipynb_checkpoints/: pdb_7rce_visualization-checkpoint.ipynb
examples/workshop/Workshop_files/libs/bootstrap/: bootstrap.min.css
examples/workshop/data/: protein-dna-ion_pdb_7rce_model.cif  protein-dna-ion_pdb_7rce_summary_confidences.json
examples/workshop/data/PDB_files/: 7rce.cif
examples/workshop/data/protein-dna-ion_pdb_7rce/: protein-dna-ion_pdb_7rce_confidences.json
src/ccbfold/: __init__.py  eval_plots.py  split_msa.py  wc.py
