[project]
name = "ccbfold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Pickering", email = "alexvpickering@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "af3cli>=0.4.1",
    "biopython>=1.85",
    "click>=8.1.8",
    "ipykernel>=6.29.5",
    "ipymolstar>=0.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
]

[project.scripts]
ccbfold = "ccbfold:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
