[project]
name = "ccbfold"
version = "0.1.6"
description = "code for the HMS CCB/RC AF3 on O2 workshop"
readme = "README.md"
license  = "CC-BY-NC-SA-4.0"
license-files =  ["LICENSE"]
authors = [
    { name = "Tyrone Lee", email = "tyrone.lee@hms.harvard.edu" },
    { name = "Alex Pickering", email = "alex_pickering@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "af3cli>=0.4.1",
    "biopython>=1.84",
    "click>=8.1.8",
]

[project.optional-dependencies]
visualization = [
    "ipykernel>=6.29.5",
    "ipymolstar>=0.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "molviewspec>=1.4.0",
    "nglview>=3.1.4",
    "numpy>=2.2.5",
]

[project.scripts]
ccbfold = "ccbfold:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
